force-app/main/default/objects/Location_Master__c/Location_Master__c.object-meta.xml
<CustomObject>
    <label>Location Master</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>