force-app/main/default/objects/Location_Master__c/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <label>Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>