force-app/main/default/objects/Location_Master__c/fields/Alias1__c.field-meta.xml
<CustomField>
    <fullName>Alias1__c</fullName>
    <label>Alias1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>