force-app/main/default/objects/Location_Master__c/fields/Alias2__c.field-meta.xml
<CustomField>
    <fullName>Alias2__c</fullName>
    <label>Alias2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>