force-app/main/default/objects/Location_Master__c/fields/Alias3__c.field-meta.xml
<CustomField>
    <fullName>Alias3__c</fullName>
    <label>Alias3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>