force-app/main/default/objects/Location_Master__c/fields/Connectivity_Modes__c.field-meta.xml
<CustomField>
    <fullName>Connectivity_Modes__c</fullName>
    <label>Connectivity Modes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>