force-app/main/default/objects/Location_Master__c/fields/Container_Handling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Container_Handling_Capacity__c</fullName>
    <label>Container Handling Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>