force-app/main/default/objects/Location_Master__c/fields/Customs_Code__c.field-meta.xml
<CustomField>
    <fullName>Customs_Code__c</fullName>
    <label>Customs Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>