force-app/main/default/objects/Location_Master__c/fields/Has_Container_Yard__c.field-meta.xml
<CustomField>
    <fullName>Has_Container_Yard__c</fullName>
    <label>Has Container Yard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>