force-app/main/default/objects/Location_Master__c/fields/Has_Customs__c.field-meta.xml
<CustomField>
    <fullName>Has_Customs__c</fullName>
    <label>Has Customs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>