force-app/main/default/objects/Location_Master__c/fields/Has_Rail_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Has_Rail_Terminal__c</fullName>
    <label>Has Rail Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>