force-app/main/default/objects/Location_Master__c/fields/Has_Warehousing__c.field-meta.xml
<CustomField>
    <fullName>Has_Warehousing__c</fullName>
    <label>Has Warehousing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>