force-app/main/default/objects/Location_Master__c/fields/Hazmat_Capable__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Capable__c</fullName>
    <label>Hazmat Capable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>