force-app/main/default/objects/Location_Master__c/fields/Iata_Code__c.field-meta.xml
<CustomField>
    <fullName>Iata_Code__c</fullName>
    <label>Iata Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>