force-app/main/default/objects/Location_Master__c/fields/Icao_Code__c.field-meta.xml
<CustomField>
    <fullName>Icao_Code__c</fullName>
    <label>Icao Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>