force-app/main/default/objects/Location_Master__c/fields/Is_Container_Seaport__c.field-meta.xml
<CustomField>
    <fullName>Is_Container_Seaport__c</fullName>
    <label>Is Container Seaport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>