force-app/main/default/objects/Location_Master__c/fields/Is_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Is_Gateway__c</fullName>
    <label>Is Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>