force-app/main/default/objects/Location_Master__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <label>Is Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>