force-app/main/default/objects/Location_Master__c/fields/location_type__c.field-meta.xml
<CustomField>
    <fullName>location_type__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>