force-app/main/default/objects/Location_Master__c/fields/Max_Vessel_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Vessel_Size__c</fullName>
    <label>Max Vessel Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>