force-app/main/default/objects/Location_Master__c/fields/Operates_24X7__c.field-meta.xml
<CustomField>
    <fullName>Operates_24X7__c</fullName>
    <label>Operates 24X7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>