force-app/main/default/objects/Location_Master__c/fields/Parent_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location_Id__c</fullName>
    <label>Parent Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>