force-app/main/default/objects/Location_Master__c/fields/Reefer_Capable__c.field-meta.xml
<CustomField>
    <fullName>Reefer_Capable__c</fullName>
    <label>Reefer Capable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>