force-app/main/default/objects/Location_Master__c/fields/Region_del__c.field-meta.xml
<CustomField>
    <fullName>Region_del__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>