force-app/main/default/objects/Location_Master__c/fields/Serves_Locations__c.field-meta.xml
<CustomField>
    <fullName>Serves_Locations__c</fullName>
    <label>Serves Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>