force-app/main/default/objects/Location_Master__c/fields/Trade_Zone__c.field-meta.xml
<CustomField>
    <fullName>Trade_Zone__c</fullName>
    <label>Trade Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>