force-app/main/default/objects/Location_Master__c/fields/Unlocode__c.field-meta.xml
<CustomField>
    <fullName>Unlocode__c</fullName>
    <label>Unlocode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>