force-app/main/default/objects/Location_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>location_type__c</columns>
    <columns>Trade_Zone__c</columns>
    <columns>Region_del__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>